sqlxo/tests/orm/derive/try/err/unknown_key.stderr
error: unknown key in #[sqlxo]
 --> tests/orm/derive/try/err/unknown_key.rs:8:9
  |
8 | #[sqlxo(foo = "bar")]
  |         ^^^^^^^^^^^
